testing a fix on paragraph clipping in image boxes

--- a/main.css
+++ b/main.css
@@ -143,4 +143,8 @@ header {
     margin-top: 40px;
 }
 
+.box p {
+    margin: 20px;
+    text-align: left;
+}
 }
